function without a session manager
When gnome flashback runs without a session manager it does not receive the session-started signal and subsequently never doesn't complete its own start up 0001-Make-sure-flashback-works-even-if-the-sesssion-manag.patch The attached patch was suggested by muktupavels