session: always emit session-ready signal

https://gitlab.gnome.org/GNOME/gnome-flashback/issues/37